--- a/index.html
+++ b/index.html
@@ -2,10 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Nikita Portfolio</title>
   </head>
 
   <body>
-    <h1>Nikita Portfolio</h1>
+    <h1>Nikita's Portfolio</h1>
+
+    <nav>
+      <a href="index.html">About</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+
+    <div class="projects" id="projects">
+      <h2>My Latest Projects</h2>
+      <ul>
+        <li>Ruby Blog</li>
+        <li>SpotQOL</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+
+    <footer>
+      <p>&copy; 2025 Nikita. All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
