--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1>Nikita's Portfolio</h1>
 
     <nav>
-      <a href="index.html">About</a>
+      <a href="index.html">Overview</a>
+      <a href="about.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
     </nav>
