Add links to the projects and style them properly

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="projects" id="projects">
       <h2>My Latest Projects</h2>
       <ul>
-        <li>Ruby Blog</li>
-        <li>SpotQOL</li>
+        <li><a href="project_ruby_blog.html">Ruby Blog</a></li>
+        <li><a href="project_spotqol.html">SpotQOL</a></li>
         <li>TBD</li>
         <li>TBD</li>
       </ul>
