Add the hosted website to the portfolio

--- a/project_ruby_blog.html
+++ b/project_ruby_blog.html
@@ -17,6 +17,14 @@
       <a href="contact.html">Contact</a>
     </nav>
 
+    <div class="projects" id="projects">
+      <h3>
+        <a href="https://ruby-blog-e20165ed57d6.herokuapp.com/"
+          >Ruby Blogging Website</a
+        >
+      </h3>
+    </div>
+
     <footer>
       <p>&copy; 2025 Nikita. All Rights Reserved.</p>
     </footer>
