Correctly link to the new file and name the header properly

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <ul>
         <li><a href="project_ruby_blog.html">Ruby Blog</a></li>
         <li><a href="project_spotqol.html">SpotQOL</a></li>
-        <li>TBD</li>
+        <li><a href="project_javanotesapp.html">Java Notes App</a></li>
         <li>TBD</li>
       </ul>
     </div>
