--- a/project_ruby_blog.html
+++ b/project_ruby_blog.html
@@ -23,6 +23,9 @@
           >Ruby Blogging Website</a
         >
       </h3>
+      <h3>
+        <a href="https://github.com/NikitaKroshko/Ruby-Blog">Github</a>
+      </h3>
     </div>
 
     <footer>
