--- a/project_spotqol.html
+++ b/project_spotqol.html
@@ -17,6 +17,12 @@
       <a href="contact.html">Contact</a>
     </nav>
 
+    <div class="projects" id="projects">
+      <h3>
+        <a href="https://github.com/NikitaKroshko/SpotQOL">Github</a>
+      </h3>
+    </div>
+
     <footer>
       <p>&copy; 2025 Nikita. All Rights Reserved.</p>
     </footer>
