--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,11 @@
       <a href="contact.html">Contact</a>
     </nav>
 
+    <div class="projects" id="projects">
+      You can contact me through my
+      <a href="mailto:nikita.kroshko@student.manchester.ac.uk">email</a>
+    </div>
+
     <footer>
       <p>&copy; 2025 Nikita. All Rights Reserved.</p>
     </footer>
