Populated the about page with the same things as the github page

--- a/about.html
+++ b/about.html
@@ -17,6 +17,31 @@
       <a href="contact.html">Contact</a>
     </nav>
 
+    <div class="projects" id="projects">
+      <h1>Greetings! I am Nikita :)</h1>
+
+      <h3>A little about me:</h3>
+      <ul>
+        <li>
+          - I am persuing a bachelor's degree in Computer Science at a
+          University 🎓🏛️
+        </li>
+        <li>- I am currently working on a few personal projects</li>
+        <li>- I am deeply passionate about vim</li>
+        <li>
+          - I am an eager lerner, currently I am learning ♦️ ruby and ruby on
+          rails
+        </li>
+        <li>
+          - My
+          <a href="https://www.linkedin.com/in/nikita-kroshko-computer-science/"
+            >LinkedIn</a
+          >
+          feel free to reach out and chat 😊
+        </li>
+      </ul>
+    </div>
+
     <footer>
       <p>&copy; 2025 Nikita. All Rights Reserved.</p>
     </footer>
