Add the about section for the java notes

--- a/project_javanotesapp.html
+++ b/project_javanotesapp.html
@@ -21,6 +21,10 @@
       <h3>
         <a href="https://github.com/NikitaKroshko/JavaNotesApp">Github</a>
       </h3>
+      A notes app built using Java and JafaFX. Main idea behind this is to learn
+      more about Java, how to use complex things in Java like streams, and how
+      to interact with resources like storing notes in files. This is a personal
+      projeect but you are very welcome to copy and do what you want with it.
     </div>
 
     <footer>
