--- a/project_spotqol.html
+++ b/project_spotqol.html
@@ -21,6 +21,7 @@
       <h3>
         <a href="https://github.com/NikitaKroshko/SpotQOL">Github</a>
       </h3>
+      Making changes to how spot is rendered for quality of life purposes
     </div>
 
     <footer>
