--- a/project_ruby_blog.html
+++ b/project_ruby_blog.html
@@ -26,6 +26,9 @@
       <h3>
         <a href="https://github.com/NikitaKroshko/Ruby-Blog">Github</a>
       </h3>
+      This is the repository for a ruby blogging website written on ruby on
+      rails. This is a personal project that has the goal of learning the
+      fundamentals of the ruby on rails framework.
     </div>
 
     <footer>
