--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="project_ruby_blog.html">Ruby Blog</a></li>
         <li><a href="project_spotqol.html">SpotQOL</a></li>
         <li><a href="project_javanotesapp.html">Java Notes App</a></li>
-        <li>TBD</li>
+        <li><a href="">Latex Template</a></li>
       </ul>
     </div>
 
