Create a new skeleton

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
     </nav>
+    <div class="projects" id="projects">
+      <h2>This is Nikita's portfolio</h2>
+      <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+      </ul>
+    </div>
     <footer>
       <p>&copy; 2025 Nikita. All Rights Reserved.</p>
     </footer>
