--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
       <h3>A little about me:</h3>
       <ul>
         <li>
-          - I am persuing a bachelor's degree in Computer Science at a
-          University 🎓🏛️
+          - I am persuing a bachelor's degree in Computer Science at the
+          University of Manchester🎓🏛️
         </li>
         <li>- I am currently working on a few personal projects</li>
         <li>- I am deeply passionate about vim</li>
