--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="contact.html">Contact</a>
     </nav>
     <div class="projects" id="projects">
-      <h2>This is Nikita's portfolio</h2>
+      <h2>Overview</h2>
       <ul>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
