--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="projects" id="projects">
       <h2>Overview</h2>
       <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="project_ruby_blog.html">My Latest Project</a></li>
+        <li><a href="about.html">A Little About Me</a></li>
+        <li><a href="projects.html">My Projects</a></li>
+        <li><a href="contact.html">Get In Contact</a></li>
       </ul>
     </div>
     <footer>
