--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
         <li><a href="project_spotqol.html">SpotQOL</a></li>
         <li><a href="project_javanotesapp.html">Java Notes App</a></li>
         <li><a href="project_latextemplate.html">Latex Template</a></li>
-        <li><a href="">AI Blog Generator</a></li>
+        <li><a href="project_aibloggenerator.html">AI Blog Generator</a></li>
       </ul>
     </div>
 
