Put the about section in

--- a/project_aibloggenerator.html
+++ b/project_aibloggenerator.html
@@ -21,7 +21,8 @@
       <h3>
         <a href="https://github.com/NikitaKroshko/AI-Blog-Generator">Github</a>
       </h3>
-      Making changes to how spot is rendered for quality of life purposes
+      This is a repository for a project of mine, I am planning on using Ollama
+      to generate ai blog posts
     </div>
 
     <footer>
