Change the spot wol to be the new description:

--- a/project_spotqol.html
+++ b/project_spotqol.html
@@ -21,7 +21,9 @@
       <h3>
         <a href="https://github.com/NikitaKroshko/SpotQOL">Github</a>
       </h3>
-      Making changes to how spot is rendered for quality of life purposes
+      A Spot quality of life extension which allows the user to change the
+      background colour and text colour, by default both are set to dark red,
+      but that can be changed
     </div>
 
     <footer>
