Add the same styling as for ruby blog to the ai blog:

--- a/project_aibloggenerator.html
+++ b/project_aibloggenerator.html
@@ -21,8 +21,10 @@
       <h3>
         <a href="https://github.com/NikitaKroshko/AI-Blog-Generator">Github</a>
       </h3>
-      This is a repository for a project of mine, I am planning on using Ollama
-      to generate ai blog posts
+      <div class="textarea" id="textarea">
+        This is a repository for a project of mine, I am planning on using
+        Ollama to generate ai blog posts
+      </div>
     </div>
 
     <footer>
