Add the same styling to the latex template

--- a/project_latextemplate.html
+++ b/project_latextemplate.html
@@ -21,7 +21,9 @@
       <h3>
         <a href="https://github.com/NikitaKroshko/LatexTemplate">Github</a>
       </h3>
-      My Latex template for University notes
+      <div class="textarea" id="textarea">
+        My Latex template for University notes
+      </div>
     </div>
 
     <footer>
