--- a/project_spotqol.html
+++ b/project_spotqol.html
@@ -21,9 +21,11 @@
       <h3>
         <a href="https://github.com/NikitaKroshko/SpotQOL">Github</a>
       </h3>
-      A Spot quality of life extension which allows the user to change the
-      background colour and text colour, by default both are set to dark red,
-      but that can be changed
+      <div class="textarea" id="textarea">
+        A Spot quality of life extension which allows the user to change the
+        background colour and text colour, by default both are set to dark red,
+        but that can be changed
+      </div>
     </div>
 
     <footer>
