Add some sections to the code

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
   <body class="bg-[#0B0A26]">
     <div class="p-40 content-center text-bold font-mono">
       <p class="text-white rounded-xl text-3xl text-center">
-        Nikita's Portfolio (Currently Under Construction 🚧)
+        Nikita's Portfolio (Currently Under Construction 🚧🏗️)
       </p>
     </div>
   </body>
+  <div class="text-white flex flex-col items-center">
+    <section id="background" class="text-left mb-4 w-64">
+      <p class="text-xl">Background</p>
+    </section>
+    <section id="background" class="text-left mb-4 w-64">
+      <p class="text-xl">Skills</p>
+    </section>
+    <section id="background" class="text-left w-64">
+      <p class="text-xl">Experience</p>
+    </section>
+  </div>
 </html>
