Add more sections and a cv link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <div class="p-40 content-center text-bold font-mono">
       <p class="text-white rounded-xl text-3xl text-center">
         Nikita's Portfolio (Currently Under Construction 🚧🏗️)
+        <a
+          href="NikitaKroshkoCV.pdf"
+          class="text-[#8563A6] px-4 py-2 rounded-xl bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]"
+        >
+          CV
+        </a>
       </p>
     </div>
   </body>
@@ -16,11 +22,17 @@
     <section id="background" class="text-left mb-4 w-64">
       <p class="text-xl">Background</p>
     </section>
-    <section id="background" class="text-left mb-4 w-64">
+    <section id="skills" class="text-left mb-4 w-64">
       <p class="text-xl">Skills</p>
     </section>
-    <section id="background" class="text-left w-64">
+    <section id="experience" class="text-left mb-4 w-64">
       <p class="text-xl">Experience</p>
+    </section>
+    <section id="resume" class="text-left mb-4 w-64">
+      <p class="text-xl">Resume</p>
+    </section>
+    <section id="projects" class="text-left mb-4 w-64">
+      <p class="text-xl">Projects</p>
     </section>
   </div>
 </html>
