--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
     </section>
     <section id="projects" class="text-left mb-4 w-64">
       <p class="text-xl">Projects</p>
+      <p class="text-sm">Lore Isup</p>
     </section>
+    <footer class="py-4">
+      <div class="container mx-auto px-4 flex justify-between items-center">
+        <div>
+          <p>&copy; 2025 Your Company. All rights reserved.</p>
+        </div>
+        <div class="flex space-x-4">
+          <a href="https://twitter.com" target="_blank">Twitter</a>
+          <a href="https://facebook.com" target="_blank">Facebook</a>
+          <a href="https://instagram.com" target="_blank">Instagram</a>
+        </div>
+      </div>
+    </footer>
   </div>
 </html>
