Add lorem isup for the time being

--- a/index.html
+++ b/index.html
@@ -21,26 +21,90 @@
   <div class="text-white flex flex-col items-center">
     <section id="background" class="text-left mb-4 w-64">
       <p class="text-xl">Background</p>
+      <p class="text-sm">
+        Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
+        bibendum magna sodales sed. Fusce sagittis augue in viverra laoreet.
+        Cras non lacinia quam. Nullam ullamcorper tellus vel bibendum
+        sollicitudin. Curabitur eu risus lorem. Vestibulum ante ipsum primis in
+        faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse
+        tempus imperdiet magna vel pellentesque. Cras id tortor dictum,
+        fermentum nisl non, blandit nisi. Nulla vel quam porttitor, gravida
+        magna vel, dictum orci. Maecenas hendrerit enim in ornare consequat.
+        Maecenas pulvinar molestie gravida. In felis urna, luctus non ante vel,
+        molestie elementum dui. Curabitur interdum commodo orci, ut condimentum
+        nisl.
+      </p>
     </section>
     <section id="skills" class="text-left mb-4 w-64">
       <p class="text-xl">Skills</p>
+      <p class="text-sm">
+        Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
+        bibendum magna sodales sed. Fusce sagittis augue in viverra laoreet.
+        Cras non lacinia quam. Nullam ullamcorper tellus vel bibendum
+        sollicitudin. Curabitur eu risus lorem. Vestibulum ante ipsum primis in
+        faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse
+        tempus imperdiet magna vel pellentesque. Cras id tortor dictum,
+        fermentum nisl non, blandit nisi. Nulla vel quam porttitor, gravida
+        magna vel, dictum orci. Maecenas hendrerit enim in ornare consequat.
+        Maecenas pulvinar molestie gravida. In felis urna, luctus non ante vel,
+        molestie elementum dui. Curabitur interdum commodo orci, ut condimentum
+        nisl.
+      </p>
     </section>
     <section id="experience" class="text-left mb-4 w-64">
       <p class="text-xl">Experience</p>
+      <p class="text-sm">
+        Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
+        bibendum magna sodales sed. Fusce sagittis augue in viverra laoreet.
+        Cras non lacinia quam. Nullam ullamcorper tellus vel bibendum
+        sollicitudin. Curabitur eu risus lorem. Vestibulum ante ipsum primis in
+        faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse
+        tempus imperdiet magna vel pellentesque. Cras id tortor dictum,
+        fermentum nisl non, blandit nisi. Nulla vel quam porttitor, gravida
+        magna vel, dictum orci. Maecenas hendrerit enim in ornare consequat.
+        Maecenas pulvinar molestie gravida. In felis urna, luctus non ante vel,
+        molestie elementum dui. Curabitur interdum commodo orci, ut condimentum
+        nisl.
+      </p>
     </section>
     <section id="resume" class="text-left mb-4 w-64">
       <p class="text-xl">Resume</p>
+      <p class="text-sm">
+        Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
+        bibendum magna sodales sed. Fusce sagittis augue in viverra laoreet.
+        Cras non lacinia quam. Nullam ullamcorper tellus vel bibendum
+        sollicitudin. Curabitur eu risus lorem. Vestibulum ante ipsum primis in
+        faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse
+        tempus imperdiet magna vel pellentesque. Cras id tortor dictum,
+        fermentum nisl non, blandit nisi. Nulla vel quam porttitor, gravida
+        magna vel, dictum orci. Maecenas hendrerit enim in ornare consequat.
+        Maecenas pulvinar molestie gravida. In felis urna, luctus non ante vel,
+        molestie elementum dui. Curabitur interdum commodo orci, ut condimentum
+        nisl.
+      </p>
     </section>
     <section id="projects" class="text-left mb-4 w-64">
       <p class="text-xl">Projects</p>
-      <p class="text-sm">Lore Isup</p>
+      <p class="text-sm">
+        Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
+        bibendum magna sodales sed. Fusce sagittis augue in viverra laoreet.
+        Cras non lacinia quam. Nullam ullamcorper tellus vel bibendum
+        sollicitudin. Curabitur eu risus lorem. Vestibulum ante ipsum primis in
+        faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse
+        tempus imperdiet magna vel pellentesque. Cras id tortor dictum,
+        fermentum nisl non, blandit nisi. Nulla vel quam porttitor, gravida
+        magna vel, dictum orci. Maecenas hendrerit enim in ornare consequat.
+        Maecenas pulvinar molestie gravida. In felis urna, luctus non ante vel,
+        molestie elementum dui. Curabitur interdum commodo orci, ut condimentum
+        nisl.
+      </p>
     </section>
     <footer class="py-4">
       <div class="container mx-auto px-4 flex justify-between items-center">
         <div>
-          <p>&copy; 2025 Your Company. All rights reserved.</p>
+          <p>&copy; Created by Nikita Kroshko in 2025</p>
         </div>
-        <div class="flex space-x-4">
+        <div class="flex space-x-4 px-10">
           <a href="https://twitter.com" target="_blank">Twitter</a>
           <a href="https://facebook.com" target="_blank">Facebook</a>
           <a href="https://instagram.com" target="_blank">Instagram</a>
