Add more spacing between the sections and make the footer more appropriate

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
   </body>
   <div class="text-white flex flex-col items-center">
-    <section id="background" class="text-left mb-4 w-64">
+    <section id="background" class="text-left mb-16 w-1/2">
       <p class="text-xl">Background</p>
       <p class="text-sm">
         Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
@@ -35,7 +35,7 @@
         nisl.
       </p>
     </section>
-    <section id="skills" class="text-left mb-4 w-64">
+    <section id="skills" class="text-left mb-16 w-1/2">
       <p class="text-xl">Skills</p>
       <p class="text-sm">
         Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
@@ -51,7 +51,7 @@
         nisl.
       </p>
     </section>
-    <section id="experience" class="text-left mb-4 w-64">
+    <section id="experience" class="text-left mb-16 w-1/2">
       <p class="text-xl">Experience</p>
       <p class="text-sm">
         Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
@@ -67,7 +67,7 @@
         nisl.
       </p>
     </section>
-    <section id="resume" class="text-left mb-4 w-64">
+    <section id="resume" class="text-left mb-16 w-1/2">
       <p class="text-xl">Resume</p>
       <p class="text-sm">
         Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
@@ -83,7 +83,7 @@
         nisl.
       </p>
     </section>
-    <section id="projects" class="text-left mb-4 w-64">
+    <section id="projects" class="text-left mb-16 w-1/2">
       <p class="text-xl">Projects</p>
       <p class="text-sm">
         Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
@@ -99,12 +99,12 @@
         nisl.
       </p>
     </section>
-    <footer class="py-4">
-      <div class="container mx-auto px-4 flex justify-between items-center">
+    <footer class="py-4 bg-[#08071a] w-full">
+      <div class="container mx-auto px-2 flex justify-between items-center">
         <div>
           <p>&copy; Created by Nikita Kroshko in 2025</p>
         </div>
-        <div class="flex space-x-4 px-10">
+        <div class="flex space-x-4 px-2">
           <a href="https://twitter.com" target="_blank">Twitter</a>
           <a href="https://facebook.com" target="_blank">Facebook</a>
           <a href="https://instagram.com" target="_blank">Instagram</a>
