Create a rought background

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     <section id="background" class="text-left mb-16 w-1/2">
       <p class="text-xl">Background</p>
       <p class="text-sm">
-        Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
-        bibendum magna sodales sed. Fusce sagittis augue in viverra laoreet.
-        Cras non lacinia quam. Nullam ullamcorper tellus vel bibendum
-        sollicitudin. Curabitur eu risus lorem. Vestibulum ante ipsum primis in
-        faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse
-        tempus imperdiet magna vel pellentesque. Cras id tortor dictum,
-        fermentum nisl non, blandit nisi. Nulla vel quam porttitor, gravida
-        magna vel, dictum orci. Maecenas hendrerit enim in ornare consequat.
-        Maecenas pulvinar molestie gravida. In felis urna, luctus non ante vel,
-        molestie elementum dui. Curabitur interdum commodo orci, ut condimentum
-        nisl.
+        I am an undergraduate student persuing a Computer Science degree at the
+        Univerisy of Manchester. I have a deep passion for many computer science
+        topics and principles. Currently I am intruiged by
+        <a
+          href="https://rubyonrails.org/"
+          class="text-[#8563A6] transition duration-300 hover:bg-[#e9e0f2] rounded-sm"
+          >Ruby on Rails</a
+        >
+        and am learning the framework as well as its guiding principles. At the
+        end of this portfolio you can find some of my projects using the
+        framework; feel free to check them out.
       </p>
     </section>
     <section id="skills" class="text-left mb-16 w-1/2">
