Add a table for the skills

--- a/index.html
+++ b/index.html
@@ -35,21 +35,35 @@
         framework; feel free to check them out.
       </p>
     </section>
+
     <section id="skills" class="text-left mb-16 w-1/2">
-      <p class="text-xl">Skills</p>
-      <p class="text-sm">
-        Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
-        bibendum magna sodales sed. Fusce sagittis augue in viverra laoreet.
-        Cras non lacinia quam. Nullam ullamcorper tellus vel bibendum
-        sollicitudin. Curabitur eu risus lorem. Vestibulum ante ipsum primis in
-        faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse
-        tempus imperdiet magna vel pellentesque. Cras id tortor dictum,
-        fermentum nisl non, blandit nisi. Nulla vel quam porttitor, gravida
-        magna vel, dictum orci. Maecenas hendrerit enim in ornare consequat.
-        Maecenas pulvinar molestie gravida. In felis urna, luctus non ante vel,
-        molestie elementum dui. Curabitur interdum commodo orci, ut condimentum
-        nisl.
-      </p>
+      <p class="text-xl font-semibold mb-4">Skills</p>
+      <table
+        class="table-auto w-full text-sm border border-gray-300 rounded-xl"
+      >
+        <thead>
+          <tr class="bg-gray-100 text-[#0B0A26]">
+            <th class="border px-4 py-2 text-left">Languages</th>
+            <th class="border px-4 py-2 text-left">Frameworks</th>
+            <th class="border px-4 py-2 text-left">Tools</th>
+            <th class="border px-4 py-2 text-left">Design</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="border px-4 py-2">
+              <ul>
+                <li>Python</li>
+                <li>Python</li>
+                <li>Python</li>
+              </ul>
+            </td>
+            <td class="border px-4 py-2"></td>
+            <td class="border px-4 py-2"></td>
+            <td class="border px-4 py-2"></td>
+          </tr>
+        </tbody>
+      </table>
     </section>
     <section id="experience" class="text-left mb-16 w-1/2">
       <p class="text-xl">Experience</p>
