--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
             <th class="border px-4 py-2 text-left">Languages</th>
             <th class="border px-4 py-2 text-left">Frameworks</th>
             <th class="border px-4 py-2 text-left">Tools</th>
-            <th class="border px-4 py-2 text-left">Design</th>
           </tr>
         </thead>
         <tbody>
@@ -54,13 +53,32 @@
             <td class="border px-4 py-2">
               <ul>
                 <li>Python</li>
-                <li>Python</li>
-                <li>Python</li>
+                <li>Java</li>
+                <li>Ruby</li>
+                <li>JS/TS</li>
+                <li>RISC-V</li>
               </ul>
             </td>
-            <td class="border px-4 py-2"></td>
-            <td class="border px-4 py-2"></td>
-            <td class="border px-4 py-2"></td>
+            <td class="border px-4 py-2">
+              <ul>
+                <li>React JS</li>
+                <li>Node JS</li>
+                <li>Ruby on Rails</li>
+                <li>Tailwind CSS</li>
+                <li>Pandas</li>
+                <li></li>
+              </ul>
+            </td>
+            <td class="border px-4 py-2">
+              <ul>
+                <li>React JS</li>
+                <li>Node JS</li>
+                <li>Ruby on Rails</li>
+                <li>Tailwind CSS</li>
+                <li>Pandas</li>
+                <li></li>
+              </ul>
+            </td>
           </tr>
         </tbody>
       </table>
