Start populating the tools section and add a general section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <th class="border px-4 py-2 text-left">Languages</th>
             <th class="border px-4 py-2 text-left">Frameworks</th>
             <th class="border px-4 py-2 text-left">Tools</th>
+            <th class="border px-4 py-2 text-left">General</th>
           </tr>
         </thead>
         <tbody>
@@ -71,11 +72,21 @@
             </td>
             <td class="border px-4 py-2">
               <ul>
-                <li>React JS</li>
-                <li>Node JS</li>
-                <li>Ruby on Rails</li>
-                <li>Tailwind CSS</li>
-                <li>Pandas</li>
+                <li>Git(Hub/Lab)</li>
+                <li>Verilog</li>
+                <li>Automated pipelines</li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </td>
+            <td class="border px-4 py-2">
+              <ul>
+                <li>Git(Hub/Lab)</li>
+                <li>Verilog</li>
+                <li>Automated pipelines</li>
+                <li></li>
+                <li></li>
                 <li></li>
               </ul>
             </td>
