Finish tools and start with general

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
                 <li>Ruby on Rails</li>
                 <li>Tailwind CSS</li>
                 <li>Pandas</li>
-                <li></li>
               </ul>
             </td>
             <td class="border px-4 py-2">
@@ -75,17 +74,15 @@
                 <li>Git(Hub/Lab)</li>
                 <li>Verilog</li>
                 <li>Automated pipelines</li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Code Linting</li>
+                <li>Heroku Deployment</li>
               </ul>
             </td>
             <td class="border px-4 py-2">
               <ul>
-                <li>Git(Hub/Lab)</li>
-                <li>Verilog</li>
+                <li>Clear Communcation</li>
+                <li>Languages 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇷🇺🇩🇪🇲🇰</li>
                 <li>Automated pipelines</li>
-                <li></li>
                 <li></li>
                 <li></li>
               </ul>
