Finish the general section and skills overall

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
               <ul>
                 <li>Clear Communcation</li>
                 <li>Languages 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇷🇺🇩🇪🇲🇰</li>
-                <li>Automated pipelines</li>
-                <li></li>
-                <li></li>
+                <li>Problem Solving</li>
+                <li>Critical Thinking</li>
+                <li>Teaching</li>
               </ul>
             </td>
           </tr>
