Start writing out the Experience

--- a/index.html
+++ b/index.html
@@ -94,17 +94,22 @@
     <section id="experience" class="text-left mb-16 w-1/2">
       <p class="text-xl">Experience</p>
       <p class="text-sm">
-        Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
-        bibendum magna sodales sed. Fusce sagittis augue in viverra laoreet.
-        Cras non lacinia quam. Nullam ullamcorper tellus vel bibendum
-        sollicitudin. Curabitur eu risus lorem. Vestibulum ante ipsum primis in
-        faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse
-        tempus imperdiet magna vel pellentesque. Cras id tortor dictum,
-        fermentum nisl non, blandit nisi. Nulla vel quam porttitor, gravida
-        magna vel, dictum orci. Maecenas hendrerit enim in ornare consequat.
-        Maecenas pulvinar molestie gravida. In felis urna, luctus non ante vel,
-        molestie elementum dui. Curabitur interdum commodo orci, ut condimentum
-        nisl.
+        <ul class = "list">
+          <li>
+            <p class = "text-xl">The University of Manchester</p>
+            <p> B.S.c (Hons) Computer Science </p> 
+          </li>
+          <li>
+            <p class = "text-xl">The University of Manchester</p>
+            <p> B.S.c (Hons) Computer Science </p> 
+          </li>
+          <li>
+            <p class = "text-xl">The University of Manchester</p>
+            <p> B.S.c (Hons) Computer Science </p> 
+          </li>
+          <li></li>
+          <li></li>
+        </ul>
       </p>
     </section>
     <section id="resume" class="text-left mb-16 w-1/2">
