Fill out experience with your current education

--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@
       </table>
     </section>
     <section id="experience" class="text-left mb-16 w-1/2">
-      <p class="text-xl">Experience</p>
+      <p class="text-xl pb-8">Experience</p>
       <p class="text-sm">
         <ul class = "list">
           <li>
             <p class = "text-xl">The University of Manchester</p>
-            <p> B.S.c (Hons) Computer Science </p> 
+            <p> B.S.c (Hons) Computer Science currently on track to a 1.1 </p> 
           </li>
           <li>
-            <p class = "text-xl">The University of Manchester</p>
-            <p> B.S.c (Hons) Computer Science </p> 
+            <p class = "text-xl pt-8">International School of Belgrade</p>
+            <p>International Baccalaureate 777 in Higher Level Mathematics, Physics and English</p> 
           </li>
           <li>
-            <p class = "text-xl">The University of Manchester</p>
-            <p> B.S.c (Hons) Computer Science </p> 
+            <p class = "text-xl pt-8"> Kyiv International School QSI </p>
+            <p>US Mastery Learning Curriculum 3.9 High School GPA</p> 
           </li>
           <li></li>
           <li></li>
