Fill out the resume section

--- a/index.html
+++ b/index.html
@@ -115,17 +115,16 @@
     <section id="resume" class="text-left mb-16 w-1/2">
       <p class="text-xl">Resume</p>
       <p class="text-sm">
-        Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
-        bibendum magna sodales sed. Fusce sagittis augue in viverra laoreet.
-        Cras non lacinia quam. Nullam ullamcorper tellus vel bibendum
-        sollicitudin. Curabitur eu risus lorem. Vestibulum ante ipsum primis in
-        faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse
-        tempus imperdiet magna vel pellentesque. Cras id tortor dictum,
-        fermentum nisl non, blandit nisi. Nulla vel quam porttitor, gravida
-        magna vel, dictum orci. Maecenas hendrerit enim in ornare consequat.
-        Maecenas pulvinar molestie gravida. In felis urna, luctus non ante vel,
-        molestie elementum dui. Curabitur interdum commodo orci, ut condimentum
-        nisl.
+        
+    <a
+          href="NikitaKroshkoCV.pdf"
+          class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]"
+        >
+          This
+        </a>
+        links to my proffesional resume, and
+    <a href="NikitaKroshkoCV.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]">this</a>
+        links to my CV.
       </p>
     </section>
     <section id="projects" class="text-left mb-16 w-1/2">
