--- a/index.html
+++ b/index.html
@@ -116,15 +116,10 @@
       <p class="text-xl">Resume</p>
       <p class="text-sm">
         
-    <a
-          href="NikitaKroshkoCV.pdf"
-          class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]"
-        >
-          This
-        </a>
-        links to my proffesional resume, and
+    <a href="NikitaKroshkoCV.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]" > This </a>
+        links to my proffesional Resume, and
     <a href="NikitaKroshkoCV.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]">this</a>
-        links to my CV.
+        links to my Curriculum Vitae.
       </p>
     </section>
     <section id="projects" class="text-left mb-16 w-1/2">
