--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
       </p>
     </section>
     <section id="resume" class="text-left mb-16 w-1/2">
-      <p class="text-xl">Resume</p>
+      <p class="text-xl">Professional</p>
       <p class="text-sm">
         
     <a href="NikitaKroshkoCV.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]" > This </a>
-        links to my proffesional Resume, and
+        links to my professional Resume, and
     <a href="NikitaKroshkoCV.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]">this</a>
         links to my Curriculum Vitae.
       </p>
