--- a/index.html
+++ b/index.html
@@ -9,18 +9,12 @@
     <div class="p-40 content-center text-bold font-mono">
       <p class="text-white rounded-xl text-3xl text-center">
         Nikita's Portfolio (Currently Under Construction 🚧🏗️)
-        <a
-          href="NikitaKroshkoCV.pdf"
-          class="text-[#8563A6] px-4 py-2 rounded-xl bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]"
-        >
-          CV
-        </a>
       </p>
     </div>
   </body>
   <div class="text-white flex flex-col items-center">
     <section id="background" class="text-left mb-16 w-1/2">
-      <p class="text-xl">Background</p>
+      <p class="text-2xl">Background</p>
       <p class="text-sm">
         I am an undergraduate student persuing a Computer Science degree at the
         Univerisy of Manchester. I have a deep passion for many computer science
@@ -37,7 +31,7 @@
     </section>
 
     <section id="skills" class="text-left mb-16 w-1/2">
-      <p class="text-xl font-semibold mb-4">Skills</p>
+      <p class="text-2xl font-semibold mb-4">Skills</p>
       <table
         class="table-auto w-full text-sm border border-gray-300 rounded-xl"
       >
@@ -92,7 +86,7 @@
       </table>
     </section>
     <section id="experience" class="text-left mb-16 w-1/2">
-      <p class="text-xl pb-8">Experience</p>
+      <p class="text-2xl pb-8">Experience</p>
       <p class="text-sm">
         <ul class = "list">
           <li>
@@ -113,7 +107,7 @@
       </p>
     </section>
     <section id="resume" class="text-left mb-16 w-1/2">
-      <p class="text-xl">Professional</p>
+      <p class="text-2xl">Professional</p>
       <p class="text-sm">
         
     <a href="NikitaKroshkoCV.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]" > This </a>
@@ -123,19 +117,8 @@
       </p>
     </section>
     <section id="projects" class="text-left mb-16 w-1/2">
-      <p class="text-xl">Projects</p>
+      <p class="text-2xl">Projects</p>
       <p class="text-sm">
-        Nam aliquam finibus sollicitudin. Proin dictum velit enim, sit amet
-        bibendum magna sodales sed. Fusce sagittis augue in viverra laoreet.
-        Cras non lacinia quam. Nullam ullamcorper tellus vel bibendum
-        sollicitudin. Curabitur eu risus lorem. Vestibulum ante ipsum primis in
-        faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse
-        tempus imperdiet magna vel pellentesque. Cras id tortor dictum,
-        fermentum nisl non, blandit nisi. Nulla vel quam porttitor, gravida
-        magna vel, dictum orci. Maecenas hendrerit enim in ornare consequat.
-        Maecenas pulvinar molestie gravida. In felis urna, luctus non ante vel,
-        molestie elementum dui. Curabitur interdum commodo orci, ut condimentum
-        nisl.
       </p>
     </section>
     <footer class="py-4 bg-[#08071a] w-full">
