Make a project template

--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
         <ul class = "list">
           <li>
             <p class = "text-xl">The University of Manchester</p>
-            <p> B.S.c (Hons) Computer Science currently on track to a 1.1 </p> 
+            <p> B.S.c (Hons) Computer Science currently on track to a 1.1 </p>
           </li>
           <li>
             <p class = "text-xl pt-8">International School of Belgrade</p>
-            <p>International Baccalaureate 777 in Higher Level Mathematics, Physics and English</p> 
+            <p>International Baccalaureate 777 in Higher Level Mathematics, Physics and English</p>
           </li>
           <li>
             <p class = "text-xl pt-8"> Kyiv International School QSI </p>
-            <p>US Mastery Learning Curriculum 3.9 High School GPA</p> 
+            <p>US Mastery Learning Curriculum 3.9 High School GPA</p>
           </li>
           <li></li>
           <li></li>
@@ -109,7 +109,7 @@
     <section id="resume" class="text-left mb-16 w-1/2">
       <p class="text-2xl">Professional</p>
       <p class="text-sm">
-        
+
     <a href="NikitaKroshkoCV.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]" > This </a>
         links to my professional Resume, and
     <a href="NikitaKroshkoCV.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]">this</a>
@@ -118,8 +118,19 @@
     </section>
     <section id="projects" class="text-left mb-16 w-1/2">
       <p class="text-2xl">Projects</p>
-      <p class="text-sm">
-      </p>
+      <div class="mt-4 border border-gray-300 rounded-xl p-4 bg-[#0B0A26] hover:shadow-lg transition-shadow duration-300">
+        <h3 class="text-xl font-semibold text-[#8563A6]">Project Name</h3>
+        <p class="text-sm mb-2">A brief description of the project explaining its purpose, technologies used, and any notable features or achievements.</p>
+        <div class="flex flex-wrap gap-2 mb-3">
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Ruby on Rails</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">JavaScript</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Tailwind CSS</span>
+        </div>
+        <div class="flex space-x-4">
+          <a href="#" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">Live Demo</a>
+          <a href="#" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitHub Repository</a>
+        </div>
+      </div>
     </section>
     <footer class="py-4 bg-[#08071a] w-full">
       <div class="container mx-auto px-2 flex justify-between items-center">
