Change name to github

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
         <div class="flex space-x-4">
           <a href="https://ruby-blog-e20165ed57d6.herokuapp.com/" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">Live Demo</a>
-          <a href="https://github.com/NikitaKroshko/Ruby-Blog" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitHub Repository</a>
+          <a href="https://github.com/NikitaKroshko/Ruby-Blog" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitHub</a>
         </div>
       </div>
     </section>
