--- a/index.html
+++ b/index.html
@@ -133,6 +133,35 @@
           <a href="https://github.com/NikitaKroshko/Ruby-Blog" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitHub</a>
         </div>
       </div>
+
+      <div class="mt-4 border border-gray-300 rounded-xl p-4 bg-[#0B0A26] hover:shadow-lg transition-shadow duration-300">
+        <h3 class="text-xl font-semibold">AI Blog Generator</h3>
+        <p class="text-sm mb-2">This is a repository for a project of mine, I am planning on using Ollama to generate ai blog posts  </p>
+        <div class="flex flex-wrap gap-2 mb-3">
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Python</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Ollama</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">LLM</span>
+        </div>
+        <div class="flex space-x-4">
+          <a href="https://github.com/NikitaKroshko/AI-Blog-Generator" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitHub</a>
+        </div>
+      </div>
+      <div class="mt-4 border border-gray-300 rounded-xl p-4 bg-[#0B0A26] hover:shadow-lg transition-shadow duration-300">
+        <h3 class="text-xl font-semibold">Ruby Blog</h3>
+        <p class="text-sm mb-2">This is the repository for a ruby blogging website written on ruby on rails. This is a personal project that has the goal of learning the fundamentals of the ruby on rails framework. </p>
+        <div class="flex flex-wrap gap-2 mb-3">
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Ruby on Rails</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Ruby</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">JavaScript</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Tailwind CSS</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Heroku</span>
+        </div>
+        <div class="flex space-x-4">
+          <a href="https://ruby-blog-e20165ed57d6.herokuapp.com/" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">Live Demo</a>
+          <a href="https://github.com/NikitaKroshko/SpotQOL" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitHub</a>
+        </div>
+      </div>
+
     </section>
     <footer class="py-4 bg-[#08071a] w-full">
       <div class="container mx-auto px-2 flex justify-between items-center">
