--- a/index.html
+++ b/index.html
@@ -147,17 +147,15 @@
         </div>
       </div>
       <div class="mt-4 border border-gray-300 rounded-xl p-4 bg-[#0B0A26] hover:shadow-lg transition-shadow duration-300">
-        <h3 class="text-xl font-semibold">Ruby Blog</h3>
-        <p class="text-sm mb-2">This is the repository for a ruby blogging website written on ruby on rails. This is a personal project that has the goal of learning the fundamentals of the ruby on rails framework. </p>
+        <h3 class="text-xl font-semibold">Spot QOL Extension</h3>
+        <p class="text-sm mb-2">A Spot quality of life extension which allows the user to change the background colour and text colour, by default both are set to dark red, but that can be changed </p>
         <div class="flex flex-wrap gap-2 mb-3">
-          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Ruby on Rails</span>
-          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Ruby</span>
-          <span class="bg-[#282243] text-xs px-2 py-1 rounded">JavaScript</span>
-          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Tailwind CSS</span>
-          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Heroku</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Extensions</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">JS</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Manifeset V2</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Firefox Dev Tools</span>
         </div>
         <div class="flex space-x-4">
-          <a href="https://ruby-blog-e20165ed57d6.herokuapp.com/" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">Live Demo</a>
           <a href="https://github.com/NikitaKroshko/SpotQOL" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitHub</a>
         </div>
       </div>
