--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </section>
     <section id="projects" class="text-left mb-16 w-1/2">
       <p class="text-2xl">Projects</p>
-      <div class="mt-4 border border-gray-300 rounded-xl p-4 bg-[#0B0A26] hover:shadow-lg transition-shadow duration-300">
+      <div class="mt-4 p-4">
         <h3 class="text-xl font-semibold">Ruby Blog</h3>
         <p class="text-sm mb-2">This is the repository for a ruby blogging website written on ruby on rails. This is a personal project that has the goal of learning the fundamentals of the ruby on rails framework. </p>
         <div class="flex flex-wrap gap-2 mb-3">
@@ -134,7 +134,7 @@
         </div>
       </div>
 
-      <div class="mt-4 border border-gray-300 rounded-xl p-4 bg-[#0B0A26] hover:shadow-lg transition-shadow duration-300">
+      <div class="mt-4 p-4">
         <h3 class="text-xl font-semibold">AI Blog Generator</h3>
         <p class="text-sm mb-2">This is a repository for a project of mine, I am planning on using Ollama to generate ai blog posts  </p>
         <div class="flex flex-wrap gap-2 mb-3">
@@ -146,7 +146,7 @@
           <a href="https://github.com/NikitaKroshko/AI-Blog-Generator" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitHub</a>
         </div>
       </div>
-      <div class="mt-4 border border-gray-300 rounded-xl p-4 bg-[#0B0A26] hover:shadow-lg transition-shadow duration-300">
+      <div class="mt-4 p-4">
         <h3 class="text-xl font-semibold">Spot QOL Extension</h3>
         <p class="text-sm mb-2">A Spot quality of life extension which allows the user to change the background colour and text colour, by default both are set to dark red, but that can be changed </p>
         <div class="flex flex-wrap gap-2 mb-3">
