Add bars and change padding

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       </p>
     </div>
   </body>
-  <div class="text-white flex flex-col items-center">
-    <section id="background" class="text-left mb-16 w-1/2">
-      <p class="text-2xl">Background</p>
+  <div class="text-white flex flex-col items-center font-mono">
+    <section id="background" class="text-left mb-4 w-1/2">
+      <p class="text-2xl text-semibold">Background</p>
       <p class="text-sm">
         I am an undergraduate student persuing a Computer Science degree at the
         Univerisy of Manchester. I have a deep passion for many computer science
@@ -30,8 +30,10 @@
       </p>
     </section>
 
-    <section id="skills" class="text-left mb-16 w-1/2">
-      <p class="text-2xl font-semibold mb-4">Skills</p>
+  <hr class="bg-white h-0.5 border-0 my-4 w-1/2">
+
+    <section id="skills" class="text-left w-1/2">
+      <p class="text-2xl font-semibold ">Skills</p>
       <table
         class="table-auto w-full text-sm border border-gray-300 rounded-xl"
       >
@@ -85,7 +87,10 @@
         </tbody>
       </table>
     </section>
-    <section id="experience" class="text-left mb-16 w-1/2">
+
+  <hr class="bg-white h-0.5 border-0 my-4 w-1/2">
+
+    <section id="experience" class="text-left w-1/2">
       <p class="text-2xl pb-8">Experience</p>
       <p class="text-sm">
         <ul class = "list">
@@ -106,7 +111,10 @@
         </ul>
       </p>
     </section>
-    <section id="resume" class="text-left mb-16 w-1/2">
+
+  <hr class="bg-white h-0.5 border-0 my-4 w-1/2">
+
+    <section id="resume" class="text-left w-1/2">
       <p class="text-2xl">Professional</p>
       <p class="text-sm">
 
@@ -116,6 +124,10 @@
         links to my Curriculum Vitae.
       </p>
     </section>
+
+
+  <hr class="bg-white h-0.5 border-0 my-4 w-1/2">
+
     <section id="projects" class="text-left mb-16 w-1/2">
       <p class="text-2xl">Projects</p>
       <div class="mt-4 p-4">
@@ -167,7 +179,7 @@
           <p>&copy; Created by Nikita Kroshko in 2025</p>
         </div>
         <div class="flex space-x-4 px-2">
-          <a href="https://twitter.com" target="_blank">Twitter</a>
+          <a href="" target="_blank">Twitter</a>
           <a href="https://facebook.com" target="_blank">Facebook</a>
           <a href="https://instagram.com" target="_blank">Instagram</a>
         </div>
