--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <p>&copy; Created by Nikita Kroshko in 2025</p>
         </div>
         <div class="flex space-x-4 px-2">
-          <a href="" target="_blank">Twitter</a>
+          <a href="https://www.linkedin.com/in/nikita-kroshko-computer-science/" target="_blank">LinkedIn</a>
           <a href="https://facebook.com" target="_blank">Facebook</a>
           <a href="https://instagram.com" target="_blank">Instagram</a>
         </div>
