--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </div>
         <div class="flex space-x-4 px-2">
           <a href="https://www.linkedin.com/in/nikita-kroshko-computer-science/" target="_blank">LinkedIn</a>
-          <a href="https://facebook.com" target="_blank">Facebook</a>
+          <a href="https://github.com/NikitaKroshko" target="_blank">GitHub</a>
           <a href="https://instagram.com" target="_blank">Instagram</a>
         </div>
       </div>
