--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         <div class="flex space-x-4 px-2">
           <a href="https://www.linkedin.com/in/nikita-kroshko-computer-science/" target="_blank">LinkedIn</a>
           <a href="https://github.com/NikitaKroshko" target="_blank">GitHub</a>
+          <a href="mailto:kroshkonikita@gmail.com" target="_blank">Email</a>
         </div>
       </div>
     </footer>
