--- a/index.html
+++ b/index.html
@@ -172,6 +172,22 @@
         </div>
       </div>
 
+   <div class="mt-4 p-4">
+        <h3 class="text-xl font-semibold">Noom Racing Quiz</h3>
+        <p class="text-sm mb-2">This is the project that my team worked on as our first year team project at the University of Manchester. The final product was a website built using React and Node which is a general pub style trivia game. This was a multi-player game, there would be one host device, and multiple players would join them using a code, then the host could start a game. In the game each user would be represented by a car, they would need to dodge obstacles and hit questions. If they hit a question and answered it correctly they got a boost. The user farthest ahead on the racing track after 10 in-game stages would win.</p>
+        <div class="flex flex-wrap gap-2 mb-3">
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">React JS</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Tailwind CSS</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Node JS</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">TypeScript</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Gitlab Pipelines</span>
+          <span class="bg-[#282243] text-xs px-2 py-1 rounded">Web Sockets</span>
+        </div>
+        <div class="flex space-x-4">
+          <a href="https://gitlab.cs.man.ac.uk/2024_comp10120_x10/group_project" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitLab (Restricted to University)</a>
+        </div>
+      </div>
+
     </section>
     <footer class="py-4 bg-[#08071a] w-full">
       <div class="container mx-auto px-2 flex justify-between items-center">
