Rewrite it to be shorter

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
    <div class="mt-4 p-4">
         <h3 class="text-xl font-semibold">Noom Racing Quiz</h3>
-        <p class="text-sm mb-2">This is the project that my team worked on as our first year team project at the University of Manchester. The final product was a website built using React and Node which is a general pub style trivia game. This was a multi-player game, there would be one host device, and multiple players would join them using a code, then the host could start a game. In the game each user would be represented by a car, they would need to dodge obstacles and hit questions. If they hit a question and answered it correctly they got a boost. The user farthest ahead on the racing track after 10 in-game stages would win.</p>
+        <p class="text-sm mb-2">This was our first-year team project at the University of Manchester—a multiplayer pub-style trivia game built with React and Node. One host device starts the game, and players join using a code. Each player controls a car, dodging obstacles and hitting questions. Correct answers give a speed boost. After 10 stages, the player furthest ahead wins.</p>
         <div class="flex flex-wrap gap-2 mb-3">
           <span class="bg-[#282243] text-xs px-2 py-1 rounded">React JS</span>
           <span class="bg-[#282243] text-xs px-2 py-1 rounded">Tailwind CSS</span>
