Rewrite the ruby blog desc

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <p class="text-2xl">Projects</p>
       <div class="mt-4 p-4">
         <h3 class="text-xl font-semibold">Ruby Blog</h3>
-        <p class="text-sm mb-2">This is the repository for a ruby blogging website written on ruby on rails. This is a personal project that has the goal of learning the fundamentals of the ruby on rails framework. </p>
+        <p class="text-sm mb-2">This is a personal project which I am continuously iterating upon to gain a further insight into the Ruby on Rails framework and philosophy. I am learning the ideas behind the rapid scaling and swift application creation that Ruby on Rails allows for. This project is hosted on Heroku feel free to click the link below and check it out.</p>
         <div class="flex flex-wrap gap-2 mb-3">
           <span class="bg-[#282243] text-xs px-2 py-1 rounded">Ruby on Rails</span>
           <span class="bg-[#282243] text-xs px-2 py-1 rounded">Ruby</span>
