Rewrite the ai blog gen desc

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
       <div class="mt-4 p-4">
         <h3 class="text-xl font-semibold">AI Blog Generator</h3>
-        <p class="text-sm mb-2">This is a repository for a project of mine, I am planning on using Ollama to generate ai blog posts  </p>
+        <p class="text-sm mb-2">This was largely a supporting project for my Ruby blog project. I created this to be able to quickly and easily populate my website with some blogs and see how it looks like in a semi-realistic scenario. For this I used Ollama for local hosting and ease of use, with Python as this would be a quick project and not extremely extensive.</p>
         <div class="flex flex-wrap gap-2 mb-3">
           <span class="bg-[#282243] text-xs px-2 py-1 rounded">Python</span>
           <span class="bg-[#282243] text-xs px-2 py-1 rounded">Ollama</span>
