Change the spot desc

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </div>
       <div class="mt-4 p-4">
         <h3 class="text-xl font-semibold">Spot QOL Extension</h3>
-        <p class="text-sm mb-2">A Spot quality of life extension which allows the user to change the background colour and text colour, by default both are set to dark red, but that can be changed </p>
+        <p class="text-sm mb-2">My University has a platform for showing student grades which is called Spot. I sometimes work in dark environments and prefer not to be blinded by a white screen in the middle of the night. As such I created a Manifest V2 extension which allows the user to change the colouring of the page to their desired preference. </p>
         <div class="flex flex-wrap gap-2 mb-3">
           <span class="bg-[#282243] text-xs px-2 py-1 rounded">Extensions</span>
           <span class="bg-[#282243] text-xs px-2 py-1 rounded">JS</span>
