--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <a href="Resume.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]" > This</a>
         links to my professional Resume, and
-    <a href="NikitaKroshkoCV.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]">this</a>
+    <a href="CVNikitaJun7.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]">this</a>
         links to my Curriculum Vitae.
       </p>
     </section>
